# AzureAISearch

./: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: config.py  main.py  search_service.py
backend/scripts/: benchmark_async_search.py  bootstrap_doctype_kb.py  bootstrap_index.py  query_doctype_kb.py
data/: doctype-catalog.json  sample-docs.json
frontend/: app.js  index.html  styles.css
scripts/: benchmark-async-search.ps1  bootstrap-doctype-kb.ps1  bootstrap-index.ps1  create-search-service.ps1  dev.ps1  login-azure.ps1  query-doctype-kb.ps1
